testsuite/tests/grammar/invalid_synthetic_parser/test.out
== list.lkt ==
list.lkt:5:47: error: Parsers cannot create synthetic nodes
5 |     @main_rule main_rule <- Example("example" ListSynthExample+("example"))
  |                                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^


== null.lkt ==
null.lkt:5:47: error: Parsers cannot create synthetic nodes
5 |     @main_rule main_rule <- Example("example" null(SynthExample))
  |                                               ^^^^^^^^^^^^^^^^^^


== skip.lkt ==
skip.lkt:5:52: error: no entity called 'SynthExapmle' in the root scope
5 |     @main_rule main_rule <- Example("example" skip(SynthExapmle))
  |                                                    ^^^^^^^^^^^^


== transform.lkt ==
transform.lkt:5:47: error: Parsers cannot create synthetic nodes
5 |     @main_rule main_rule <- Example("example" SynthExample())
  |                                               ^^^^^^^^^^^^^^


lkt_compile: Done
